syntax = "proto3";

package bytebase.store;

import "store/policy.proto";

option go_package = "generated-go/store";

message SQLReviewPayload {
  repeated SQLReviewRule rule_list = 1;
}
